# gaussiant

./: .gitignore  Cargo.toml  README.md  RELEASES.md
.github/workflows/: nightly.yaml  stable.yml
examples/: mod-arith.rs  norm-is-multiplicative.rs  plot.rs  prime-conjugate.rs  prime1mod4.rs  problem-153.rs  search.rs
src/: gcd.rs  lib.rs  ops.rs  tests.rs
