[package]
edition = "2021"
name = "gaussiant"
version = "0.5.0"
description = "Gaussian integers"
keywords = ["mathematics", "numerics"]
repository = "https://github.com/pierwill/gaussiant"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
doc-comment = "0.3.3"
num-complex = "0.4.0"
num-traits = "0.2"
plotters = { version = "0.3.1", optional = true }
primal = "0.3.0"
